# nathanjent.com

./: .editorconfig  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  Vagrantfile  _cobalt.yml  bootstrap.sh  example.env  makefile  playbook.yml  requirements.yml
.github/workflows/: nathanjent.com-build.yaml  nathanjent.com-orchestration.yaml
backend/: Cargo.toml  example.env
backend/common/: Cargo.toml
backend/common/src/: errors.rs  lib.rs  response.rs  static_content.rs
backend/http_router/src/: errors.rs  handler.rs  lib.rs
backend/migrations/2017-08-31-101658_create_posts/: up.sql
backend/query_parse/: Cargo.toml
backend/query_parse/src/: lib.rs  query.rs  url_encoder.rs
backend/src/: cgi_handler.rs  lib.rs  models.rs
bootstrap/: apache.sh  dev_tools.sh  diesel.sh  mysql.sh  phpmyadmin.sh  rust.sh
common/: Cargo.toml
common/src/: lib.rs  query.rs  request.rs
core/: Cargo.toml
frontend/: Cargo.toml  package.json
frontend/src/: index.html  lib.rs
http_router/: Cargo.toml
http_router/src/: lib.rs  router.rs
migrations/2017-08-31-101658_create_posts/: down.sql
posts/: post-1.md
src/: 404.md  about.md  index.md  main.rs  models.rs  style.sass
src/_defaults/: _default.sass  colors.scss  pages.md  posts.md
src/_includes/: _footer.liquid  _footer.sass  _mainmenu.liquid  _mainmenu.sass
src/_layouts/: _main.sass  default.liquid
src/_sass/: header.sass  main.sass
src/posts/: post-1.md  post-2.md
static/: .env  .htaccess
