[package]
name = "backend"
version = "0.2.0"
authors = ["nathanjent <nathanjent@gmail.com>"]
edition = "2021"

[dependencies]
dotenv = "0.15.0"
outer_cgi = "0.2.3"
http = "0.2.5"
matchit = "0.4.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

common = { version = "0.2.0", path = "common" }

# Shared with frontend
core = { version = "0.1.0", path = "../core" }

[workspace]
members = ["common", "query_parse"]
