[package]
authors = ["nathanjent <nathanjent@gmail.com>"]
name = "common"
version = "0.2.0"

[dependencies]
chrono = "0.4.0"
comrak = "0.1.8"
futures = "0.1.16"
http = "0.2.5"
#tokio-core = "0.1.10"
#tokio-file-unix = "0.4.1"
#tokio-io = "0.1.3"
#diesel = { version = "1.4.8", features = ["mysql"] }
query_parse = { version = "0.1.0", path = "../query_parse" }
